fix z-index

--- a/style/style.css
+++ b/style/style.css
@@ -24,7 +24,8 @@ a{
 .container{
 	width: 1160px;
 	padding: 0;
-	margin: 0 5%;
+	margin: 0 20%;
+	text-align: center;
 }
 .button{
 	display: inline-block;
@@ -763,7 +764,7 @@ td{
 	а с учётом марджин лефт 20 пикс у нас получается итого 720 пикс, поэтому сбрасываем каждому 3-эму элементу правый отступ*/
 
 	position: relative;
-	z-index: 1001;
+	z-index: 6;
 }
 .catalog-site:nth-child(2n){
 	margin-right: 0; /* сбросили правый марджин каждому 3-эму элементу*/
@@ -812,6 +813,8 @@ td{
 	position: absolute;
 	top: 387px;
 	opacity: 0;
+	z-index: 1;
+
 
 	width: 200px;
 	height: 158px;
@@ -913,7 +916,7 @@ td{
 	background-color: #ffffff;
 }
 /* Modal contact-us*/
-.modal{
+.modal {
 	position: fixed;
 	top: 5%;
 	left: 50%;
@@ -922,7 +925,7 @@ td{
 	background-color: #ffffff;
 	box-shadow: 0px 5px 50px rgba(0, 0, 0, 0.9);
 
-	z-index: 20;
+	z-index: 11;
 
 	padding: 60px 103px;
 	display: none; /* Временно */
